corrected json issues.
Working. Done.

--- a/Random Users/Random Users/Base.lproj/Main.storyboard
+++ b/Random Users/Random Users/Base.lproj/Main.storyboard
@@ -54,6 +54,8 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="contactLabel" destination="WvP-bc-cCc" id="6Bf-d9-Tmb"/>
+                                    <outlet property="thumbView" destination="nim-lX-0u8" id="bQO-Ul-ajO"/>
                                     <segue destination="WL3-hr-fuC" kind="show" identifier="viewSegue" id="rsZ-32-WQL"/>
                                 </connections>
                             </tableViewCell>
@@ -90,7 +92,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NVL-Ma-gzk">
                                         <rect key="frame" x="0.0" y="258" width="240" height="36"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="240" id="dqK-ls-fkV"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="dqK-ls-fkV"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
@@ -99,7 +101,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOS-Kf-s3l">
                                         <rect key="frame" x="0.0" y="312" width="200" height="20.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="X2I-wm-vNf"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="X2I-wm-vNf"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -108,7 +110,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fV-9N-YK6">
                                         <rect key="frame" x="0.0" y="350.5" width="200" height="20.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="4Ne-Vr-Tgg"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="4Ne-Vr-Tgg"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -125,6 +127,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yT6-my-aCb"/>
                     </view>
+                    <connections>
+                        <outlet property="emailLabel" destination="7fV-9N-YK6" id="Kr6-nh-Bb5"/>
+                        <outlet property="heroImage" destination="GmB-CU-tUz" id="CNk-cn-4P3"/>
+                        <outlet property="nameLabel" destination="NVL-Ma-gzk" id="5xr-xD-aG3"/>
+                        <outlet property="phoneLabel" destination="QOS-Kf-s3l" id="Unw-qa-KoL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KLG-hS-oQQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
